# adwible

./: .gitignore  Makefile  adwible.css  adwible.ui  b7cj8w.ui  bc.c  bc.h  bc.txt  bs.c  bs.h  chroot.sh  ck3fm7.gresource.xml  com.un1gfn.adwible.desktop  demo.c  demo.ui  flowbox.css  main.c  main_noresource.c  meson.build  row-dark.css  row-light.css  rp5gqm.gresource.xml  scroll.c  scroll.h  transferconf  ui.c  ui.h  w59xv6.ui
0-noresource/: meson.build
1-res-gtkbuilder/: b7cj8w.ui  main.c  meson.build
